# simdex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  bench_batch.cpp  bench_crossover.cpp  bench_neon_opt.cpp  bench_pgm_e2e.cpp  bench_query_parallel.cpp  bench_strategies.cpp
examples/: basic_usage.cpp  pgm_example.cpp
include/simdex/: simdex.hpp
include/simdex/core/: concepts.hpp  types.hpp
include/simdex/index/: batch_query.hpp  simd_pgm_index.hpp
include/simdex/search/: eytzinger.hpp  kary_search.hpp  linear_scan.hpp  linear_scan_neon_opt.hpp  parallel_queries.hpp  scalar_baseline.hpp
include/simdex/simd/: platform.hpp  vec_traits.hpp
tests/: CMakeLists.txt  test_baseline.cpp  test_batch_query.cpp  test_parallel_queries.cpp  test_pgm_integration.cpp  test_search_strategies.cpp
